k8s/apps/qinglong/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qinglong
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qinglong.chenwx.top`)
      kind: Rule
      services:
        - name: qinglong
          namespace: cwx
          port: 80
